# The-Unbeatable-Chess

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: about.txt  rules.txt
src/: assets_manager.py  board.py  constants.py  main.py  ui_elements.py
